Fix `z-index`es

--- a/components/Dialog/styles.module.scss
+++ b/components/Dialog/styles.module.scss
@@ -5,6 +5,7 @@
 		align-items: center;
 		justify-content: center;
 		position: fixed;
+		z-index: 5;
 		left: 0;
 		top: 0;
 		width: 100%;
